<resources>
    <string name="app_name">DIU Result Generator</string>
    <string name="id_text">Your ID</string>
    <string name="go_text">Complete Result</string>
    <string name="result_show_button">Generate Result</string>
    <string name="to_text">to</string>
    <string name="advanced_options">Advance Options</string>
    <string name="id_hint">Your DIU ID</string>
    <string name="from_text">From</string>
    <string name="current_process">Fetching 151</string>
    <string name="name_text">Name</string>
    <string name="my_name">Mehedi Imam Shafi</string>
    <string name="my_id">151-15-5248</string>
    <string name="my_batch">40</string>
    <string name="batch_text">Batch</string>
    <string name="enrollment">Enrollment</string>
    <string name="my_enrollment">Spring, 2015</string>
    <string name="cg_text">CGPA</string>
    <string name="total_credit_text">Credits</string>
    <string name="total_courses">Courses</string>
    <string name="cg">4.0</string>
    <string name="credit_done">89</string>
    <string name="courses">37</string>
    <string name="course_title">System Analysis and Organization</string>
    <string name="credit_text">Credit</string>
    <string name="credit">3.0</string>
    <string name="course_code">CSE112</string>
    <string name="about">About the Project</string>
    <string name="semester_id">Summer 2017</string>
    <string name="show_result">Show Result</string>
    <string name="course_code_text">Code</string>
    <string name="course_name_text">Course Name</string>
    <string name="specific_semester">Specific Semester Result</string>
    <string name="result_analysis">Analyze Your Result</string>
    <string name="suggestions">Get Suggestive Path</string>
    <string name="sepecific_semester_des">See Result by Selecting Semester</string>
</resources>
