<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="shafi.mehedi.diuresultgenerator.ResultActivity">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/studentData"
            android:layout_marginTop="3dp"
            android:orientation="vertical"
            android:background="#E6EE9C">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="@string/name_text"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:id="@+id/resultStudentName"
                    android:text="@string/my_name"
                    android:layout_marginLeft="55dp"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="@string/id_text"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/my_id"
                    android:id="@+id/resultStudentId"
                    android:layout_marginLeft="42dp"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="@string/enrollment"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/my_enrollment"
                    android:id="@+id/resultStudentEnroll"
                    android:layout_marginLeft="20dp"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="@string/batch_text"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/my_batch"
                    android:id="@+id/resultStudentBatch"
                    android:layout_marginLeft="55dp"/>


            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:paddingBottom="5dp"
            android:orientation="horizontal"
            android:id="@+id/resultSummary"
            android:background="#BDBDBD">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_courses"
                android:textSize="18sp"
                android:layout_marginLeft="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/courses"
                android:textSize="18sp"
                android:id="@+id/courseTaken"
                android:layout_marginLeft="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/total_credit_text"
                android:layout_marginLeft="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/creditDone"
                android:textSize="18sp"
                android:text="@string/credit_done"
                android:layout_marginLeft="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cg_text"
                android:textSize="18sp"
                android:layout_marginLeft="10dp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cgText"
                android:layout_marginLeft="10dp"
                android:text="@string/cg"
                android:textSize="18sp"
                android:textColor="@color/deep_green"
                android:textStyle="bold"
                android:layout_marginRight="10dp"/>

        </LinearLayout>

            <ListView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/studentData"
                android:id="@+id/ResultList"
                tools:layout_editor_absoluteY="0dp"
                tools:layout_editor_absoluteX="0dp"
                android:dividerHeight="10dp"
                android:layout_marginTop="10dp"
                android:layout_above="@id/resultSummary"
                android:layout_marginBottom="10dp"
                android:focusable="true"
                android:nestedScrollingEnabled="true">


            </ListView>

    </RelativeLayout>



</android.support.constraint.ConstraintLayout>
