<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/list_item_shadow">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:id="@+id/semester_row_semester"
        android:textSize="18sp"
        android:text="@string/semester_id"
        android:textColor="#000"
        android:textStyle="bold"/>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginLeft="10dp"
                android:text="@string/course_code_text"
                android:textColor="@color/deep_blue_grey"
                android:textStyle="bold"  />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/deep_blue_grey"
                android:text="@string/course_name_text"
                android:layout_marginLeft="15dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/deep_blue_grey"
                android:text="@string/credit_text"
                android:textStyle="bold"
                android:layout_marginLeft="50dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="18sp"
                android:text="GPA"
                android:textColor="@color/deep_blue_grey"
                android:layout_marginLeft="15dp"/>

        </LinearLayout>

         <ListView
            android:id="@+id/subjectListSemester"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:divider="#767373"
            android:dividerHeight="5dp">
        </ListView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/ash">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/total_courses"
            android:layout_marginTop="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:id="@+id/total_courses_semester"
            android:text="@string/courses"
            android:layout_marginTop="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_credit_text"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/credit_done"
            android:layout_marginLeft="8dp"
            android:id="@+id/credit_done_semester"
            android:layout_marginTop="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="8dp"
            android:text="SGPA"
            android:layout_marginTop="5dp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sgpa_semester"
            android:layout_marginLeft="8dp"
            android:text="@string/cg"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cg_text"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="5dp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cg"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="5dp"
            android:id="@+id/cgpa_semester"
            android:textColor="@color/bright_indigo"
            android:textStyle="bold"
            android:layout_marginRight="2dp"/>

    </LinearLayout>

</LinearLayout>