<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/result_row_bg">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rowCourseId"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/course_code"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_weight="5"
            android:layout_height="wrap_content"
            android:id="@+id/rowCourseName"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/course_title"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rowCourseCredit"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/credit"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rowCourseResult"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/cg"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

    </LinearLayout>

</RelativeLayout>