<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="shafi.mehedi.diuresultgenerator.MainActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:layout_width="200dip"
            android:layout_height="wrap_content"
            android:id="@+id/idInput"
            android:hint="@string/id_text"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/black"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go_text"
            android:paddingRight="5dp"
            android:paddingLeft="5dp"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:background="@drawable/go_button_bg"
            android:id="@+id/go_button"
            android:shadowColor="@color/light_grey" />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progress_bar"
            android:layout_marginTop="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progress_text"
            android:layout_marginTop="15dp"
            android:textColor="@color/deep_blue_grey"
            android:textSize="15sp"/>

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/show_result"
            android:background="@drawable/show_result_bg"
            android:text="@string/show_result"
            android:layout_marginTop="10dp"/>

        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:textStyle="bold"-->
            <!--android:textColor="@color/dark_grey"-->
            <!--android:text="@string/advanced_options"-->
            <!--android:layout_marginTop="5dp"-->
            <!--android:id="@+id/advanceButton"/>-->
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
